# redesigned-potato

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLE_USAGE.md  FAQ.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  bot.txt  bot2.txt  config_example.py  docker-compose.prod.yml  docker-compose.yml  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt  run.py  setup.py  test_bot.py  tox.ini  war_simulation_bot.py
.github/workflows/: ci.yml
